<resources>
    <string name="app_name">dengue_em_foco</string>
    <string name="dengue_em_foco">Dengue em Foco,</string>
    <string name="main_text">O app que te deixa por dentro da situação da dengue em cada estado do Brasil!</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="apresentamos_o">Apresentamos o</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="logo">LOGO</string>
    <string name="acessar">Acessar</string>
    <string name="label_name">Digite seu nome</string>

    //RegistrationActivityValues
    <string name="registration_title">Cadastro</string>
    <string name="registration_label_name">Nome</string>
    <string name="registration_label_email">Email</string>
    <string name="registration_label_city">Cidade</string>
    <string name="registration_label_state">Estado</string>
    <string name="button_registration_label">Enviar</string>
    <string name="title_activity_dengue_notices">DengueNoticesActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>
